2002-10-06  Masatake YAMATO  <yamato@redhat.com>

	* pxl-outline.c (free_pixel_outline): New function.
	(CHECK_FATAL_DO): new macro.
	(find_outline_pixels): free outline_list if an exception
	is raised.
	(find_one_outline): free outline if an exception is
	raised.
	(find_centerline_pixels): free outline if  an exception
	is raised. use free_pixel_outline.

2002-10-06  Masatake YAMATO  <yamato@redhat.com>

	* pxl-outline.c (find_centerline_pixels): free
	unused outline and partial_outline after using.

	* input-magick.c (input_magick_reader): freed
	image_info and image.

	* output.c (at_output_shortlist): driverdescription
	is freed.

	* median.c (quantize): removed debug print.

	* input*.[ch]: renamed all loader.

	* input-magick.c: added a forgotten argument.

2002-10-04  Masatake YAMATO  <yamato@redhat.com>

	* quantize.h: Added a declaration for 
	quantize_object_free.

	* spline.[ch] (new_spline_list_with_spline): Renamed
	from init_spline_list.

	* fit.c (fit_curve_list): deleted temp.

	* median.c (quantize_object_free): New function.
	(quantize): Use quantize_object_free.

	* autotrace.c (at_bitmap_read): Set new_opts.

2002-10-03  Masatake YAMATO  <yamato@redhat.com>

	* README: Updated.

2002-10-03  Martin Weber <martweb@gmx.net>

	* autotrace.dsp: Updated.

2002-10-02  Masatake YAMATO  <yamato@redhat.com>

	* exception.h: renamed a type at_exception to at_exception_type.

	* * (*): used at_exception_type.

	* autotrace.h (at_doc__preserve_width::width_factor): 
	new member.
	(struct _at_spline_list_array_type): Likewise.
	(_, N_): New dummy macro for gettext.

2002-09-29  Masatake YAMATO  <yamato@redhat.com>

	* * (*): at_output_opts_type is introduced.

2002-09-29  Martin Weber <martweb@gmx.net>

	README: added new option
	image-proc.c: removed warnings

	Message-ID: <3D97211D.85F25D9C@gmx.net>.

2002-09-29  Martin Weber <martweb@gmx.net>

	*: now recognizes the line width
	median.c: bugfix

	Message-ID: <3D96F758.2B17DAB9@gmx.net>.
